--- a/src/main/resources/com/example/pilifitproject/view/Home.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/Home.fxml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.effect.Blend?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -14,10 +17,11 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.paint.RadialGradient?>
 <?import javafx.scene.paint.Stop?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="700.0" prefWidth="1280.0" stylesheets="@../styles/Home.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.controller.HomeController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1580.0" stylesheets="@../styles/Home.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.controller.HomeController">
     <top>
         <AnchorPane BorderPane.alignment="CENTER">
             <children>
@@ -26,19 +30,19 @@
                         <Image url="@../images/background/bg.png" />
                     </image>
                 </ImageView>
-                <GridPane layoutX="40.0" layoutY="17.0" prefHeight="30.0" prefWidth="233.0">
+                <GridPane id="homeabtcontGrid" layoutX="40.0" layoutY="17.0" opacity="0.9" prefHeight="45.0" prefWidth="379.0">
                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="105.5999755859375" minWidth="10.0" prefWidth="87.4666748046875" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="136.5333251953125" minWidth="10.0" prefWidth="100.53335266113282" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="144.39999389648438" minWidth="10.0" prefWidth="142.2666473388672" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="108.0" prefWidth="111.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="109.5" prefWidth="117.5" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="206.33331298828125" minWidth="149.33334350585938" prefWidth="152.5" />
                     </columnConstraints>
                     <rowConstraints>
                         <RowConstraints />
                     </rowConstraints>
                     <children>
-                        <Button fx:id="HomeController" mnemonicParsing="false" onAction="#goHome" prefHeight="26.0" prefWidth="116.0" styleClass="scene-switch" text="HOME" />
-                        <Button fx:id="ContactController" mnemonicParsing="false" onAction="#goContact" prefHeight="26.0" prefWidth="90.0" styleClass="scene-switch" text="CONTACT" GridPane.columnIndex="2" />
-                        <Button fx:id="AboutController" mnemonicParsing="false" onAction="#goAbout" prefHeight="26.0" prefWidth="126.0" styleClass="scene-switch" text="ABOUT" GridPane.columnIndex="1" />
+                        <Button fx:id="HomeController" mnemonicParsing="false" onAction="#goHome" prefHeight="26.0" prefWidth="112.0" styleClass="scene-switch" text="HOME" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="BOTTOM" GridPane.vgrow="ALWAYS" />
+                        <Button fx:id="ContactController" mnemonicParsing="false" onAction="#goContact" prefHeight="26.0" prefWidth="188.0" styleClass="scene-switch" text="CONTACT" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="BOTTOM" GridPane.vgrow="ALWAYS" />
+                        <Button fx:id="AboutController" mnemonicParsing="false" onAction="#goAbout" prefHeight="28.0" prefWidth="200.0" styleClass="scene-switch" text="ABOUT" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="BOTTOM" GridPane.vgrow="ALWAYS" />
                     </children>
                 </GridPane>
             <GridPane layoutY="216.0" prefHeight="30.0" prefWidth="1586.0">
@@ -55,16 +59,10 @@
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                        <Button ellipsisString="" mnemonicParsing="false" onAction="#goFavorites" prefHeight="34.0" prefWidth="149.0" styleClass="closet-collections" text="FAVORITES" textFill="WHITE" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
-                     <font>
-                        <Font name="System Bold" size="23.0" />
-                     </font></Button>
                       <Button fx:id="closetButton" alignment="CENTER" ellipsisString="CLOSET" mnemonicParsing="false" onAction="#goCloset" styleClass="closet-collections" stylesheets="@../styles/Home.css" text="CLOSET" GridPane.columnIndex="3">
-                          <font>
-                              <Font name="System Bold" size="23.0" />
-                          </font>
                           <textFill>
                               <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
                                   <stops>
@@ -82,27 +80,25 @@
                               </RadialGradient>
                           </textFill>
                   </Button>
-                      <Button fx:id="collectionsButton" alignment="CENTER" ellipsisString="COLLECTION" mnemonicParsing="false" onAction="#goCollection" style="-fx-background-color: rgba(0, 0, 0, 0, 0.1);" styleClass="closet-collections" text="COLLECTION" textFill="WHITE" GridPane.columnIndex="5">
-                          <font>
-                              <Font name="System Bold" size="23.0" />
-                          </font>
-                      </Button>
+                        <Button ellipsisString="" mnemonicParsing="false" onAction="#goFavorites" prefHeight="34.0" prefWidth="149.0" styleClass="closet-collections" text="FAVORITES" textFill="WHITE" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+                      <Button fx:id="collectionsButton" alignment="CENTER" ellipsisString="COLLECTION" mnemonicParsing="false" onAction="#goCollection" style="-fx-background-color: rgba(0, 0, 0, 0, 0.1);" styleClass="closet-collections" text="COLLECTION" textFill="WHITE" GridPane.columnIndex="5" />
+                  <Line endX="100.0" startX="-100.0" stroke="WHITE" strokeLineJoin="ROUND" strokeMiterLimit="5.0" strokeWidth="2.0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
                </children>
             </GridPane>
-            <ImageView fitHeight="111.0" fitWidth="380.0" layoutX="603.0" layoutY="69.0" pickOnBounds="true">
+            <ImageView fitHeight="110.0" fitWidth="390.0" layoutX="603.0" layoutY="67.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../images/others/2.png" />
+                  <Image url="@../images/others/PILIFITS-PRJTITLE.png" />
                </image>
             </ImageView>
             </children>
         </AnchorPane>
     </top>
-    <right>
+   <center>
         <AnchorPane prefHeight="442.0" prefWidth="1580.0" BorderPane.alignment="CENTER">
             <children>
-                <ScrollPane fitToHeight="true" fitToWidth="true" layoutX="188.0" layoutY="58.0" prefHeight="480.0" prefWidth="854.0">
+                <ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" layoutX="160.0" layoutY="58.0" prefHeight="480.0" prefWidth="881.0">
                     <content>
-                        <GridPane id="upload/itemsgridpane" fx:id="itemsGridPane" gridLinesVisible="true" hgap="15.0" prefHeight="462.0" prefWidth="851.0" styleClass="grid-cell" vgap="10.0">
+                        <GridPane id="upload/itemsgridpane" fx:id="itemsGridPane" gridLinesVisible="true" hgap="20.0" prefHeight="462.0" prefWidth="886.0" styleClass="grid-cell" vgap="20.0">
                             <columnConstraints>
                                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="124.0" minWidth="124.0" percentWidth="0.0" prefWidth="124.0" />
                                 <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="124.0" minWidth="124.0" percentWidth="0.0" prefWidth="124.0" />
@@ -129,8 +125,15 @@
                             </padding>
                         </GridPane>
                     </content>
+               <styleClass>
+                  <String fx:value="transparent-scrollpane" />
+                  <String fx:value="black-slider" />
+               </styleClass>
+               <effect>
+                  <Blend mode="SOFT_LIGHT" opacity="0.45" />
+               </effect>
                 </ScrollPane>
-                <GridPane id="filtergridpane" layoutX="-6.0" layoutY="10.0" prefHeight="30.0" prefWidth="1587.0">
+                <GridPane id="filtergridpane" layoutX="-6.0" layoutY="15.0" prefHeight="30.0" prefWidth="1587.0">
                     <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
@@ -149,15 +152,21 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                     <children>
+                        <MenuButton fx:id="categoryDropdown" accessibleRole="COMBO_BOX" alignment="CENTER" mnemonicParsing="false" prefHeight="34.0" prefWidth="150.0" styleClass="drop-select" text="CATEGORY" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
                         <MenuButton fx:id="styleDropdown" accessibleRole="COMBO_BOX" alignment="CENTER" mnemonicParsing="false" prefHeight="34.0" prefWidth="150.0" styleClass="drop-select" text="STYLE" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
-                        <MenuButton fx:id="categoryDropdown" accessibleRole="COMBO_BOX" alignment="CENTER" mnemonicParsing="false" prefHeight="34.0" prefWidth="150.0" styleClass="drop-select" text="CATEGORY" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
                         <MenuButton fx:id="colorDropdown" accessibleRole="COMBO_BOX" alignment="CENTER" mnemonicParsing="false" prefHeight="34.0" prefWidth="150.0" styleClass="drop-select" text="COLOR" GridPane.columnIndex="5" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
                     </children>
                 </GridPane>
-            <AnchorPane layoutX="1082.0" layoutY="5.0" prefHeight="517.0" prefWidth="282.0">
+            <AnchorPane layoutX="1150.0" layoutY="5.0" prefHeight="517.0" prefWidth="282.0">
                <children>
-                            <Button fx:id="saveFitBtn" layoutX="195.0" layoutY="484.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="88.0" styleClass="save-button" text="SAVE" />
-                            <Button fx:id="generateRandomFitBtn" layoutX="90.0" layoutY="4.0" mnemonicParsing="false" prefHeight="43.0" prefWidth="101.0" styleClass="icon-button" text="Generate" />
+                            <Button fx:id="saveFitBtn" layoutX="105.0" layoutY="484.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="88.0" styleClass="save-button" text="SAVE" />
+                            <Button fx:id="generateRandomFitBtn" layoutX="70.0" layoutY="4.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="34.0" prefWidth="140.0" styleClass="icon-button" text="Generate">
+                     <graphic>
+                        <ImageView fitHeight="28.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/icons/generateicon1.png" />
+                           </image></ImageView>
+                     </graphic></Button>
                             <GridPane layoutY="36.0" prefHeight="400.0" prefWidth="281.0">
                                 <columnConstraints>
                                     <ColumnConstraints hgrow="SOMETIMES" minWidth="-Infinity" />
@@ -204,8 +213,15 @@
                                 </children>
                             </GridPane>
                </children>
+               <effect>
+                  <DropShadow>
+                     <color>
+                        <Color opacity="0.614503800868988" />
+                     </color>
+                  </DropShadow>
+               </effect>
             </AnchorPane>
             </children>
         </AnchorPane>
-    </right>
+   </center>
 </BorderPane>
