favorites bug fixed

--- a/src/main/resources/com/example/pilifitproject/styles/Home.css
+++ b/src/main/resources/com/example/pilifitproject/styles/Home.css
@@ -175,6 +175,7 @@
 
 .save-button {
     -fx-background-color: transparent;
+    -fx-font-weight: bold;
     -fx-border-color: black;
     -fx-border-width: 2px;
     -fx-text-fill: black;
