FINALIZED ALL LAYOUT-fxml&css

--- a/src/main/resources/com/example/pilifitproject/styles/FitDialog.css
+++ b/src/main/resources/com/example/pilifitproject/styles/FitDialog.css
@@ -20,6 +20,8 @@
     -fx-background-color: transparent;
     -fx-font-size: 14px;
     -fx-cursor: hand;
+    -fx-font-family: "Times New Roman";
+    -fx-font-style: bold;
 }
 .details-button {
      -fx-background-color: transparent;
