--- a/src/main/resources/com/example/pilifitproject/styles/Closet.css
+++ b/src/main/resources/com/example/pilifitproject/styles/Closet.css
@@ -14,15 +14,13 @@
 
 .heart-bin {
     -fx-background-color: #d9d9d9;
-    -fx-background-image: "@../images/others/DeleteBin.png";
     -fx-border-color: transparent;
     -fx-border-radius: 8;
     -fx-border-width: 2px;
     -fx-background-radius: 8;
     -fx-padding: 5 10;
-    -fx-font-size: 8px;
+    -fx-font-size: 14px;
     -fx-cursor: hand;
-
 }
 .heart-bin: hover {
     -fx-background-color: #F75D59;
@@ -30,6 +28,7 @@
 
 .title-text {
     -fx-font-size: 18px;
+    -fx-font-family: "Georgia";
     -fx-font-weight: bold;
 }
 
@@ -52,8 +51,10 @@
 }
 
 .text-filter {
-    -fx-font-size: 14px;
+    -fx-font-size: 11.5px;
+    -fx-font-family: "Verdana";
     -fx-font-weight: bold;
+    -fx-font-style: italic;
 }
 
 .image-holder {
@@ -61,6 +62,18 @@
     -fx-background-radius: 15;
     -fx-border-color: black;
     -fx-border-radius: 10;
+    -fx-font-size: 13px;
+    -fx-font-family: "Calibri";
+}
+
+.inputtext-holder {
+    -fx-background-color:  white;
+    -fx-background-radius: 15;
+    -fx-border-color: black;
+    -fx-border-radius: 10;
+    -fx-font-size: 14px;
+    -fx-font-family: "Times New Roman";
+    -fx-font-style: bold;
 }
 
 .select-items {
@@ -95,11 +108,10 @@
      -fx-cursor: hand;
  }
 .save-button {
-    -fx-background-color: #f5f5f5;
+    -fx-background-color: #d9d9d9;
     -fx-text-fill: black;
-    -fx-font-size: 12px;
-    -fx-font-weight: regular;
-    -fx-font-family: "System Bold";
+    -fx-font-size: 11px;
+    -fx-font-family: "Calibri";
     -fx-border-color: transparent;
     -fx-background-radius: 15px;
     -fx-cursor: hand;
@@ -116,3 +128,26 @@
     -fx-background-color: #d9d9d9;
     -fx-border-color: transparent;
 }
+
+.view-button {
+    -fx-background-color: transparent;
+    -fx-border-color: transparent;
+    -fx-border-radius: 8;
+    -fx-border-width: 2px;
+    -fx-background-radius: 8;
+    -fx-padding: 1 1;
+    -fx-font-size: 15px;
+    -fx-cursor: hand;
+}
+
+.DL-button {
+    -fx-background-color: transparent;
+    -fx-border-color: transparent;
+    -fx-border-radius: 8;
+    -fx-border-width: 2px;
+    -fx-background-radius: 8;
+    -fx-padding: 1 1;
+    -fx-font-size: 15px;
+    -fx-cursor: hand;
+}
+
