--- a/src/main/resources/com/example/pilifitproject/styles/Confirmation.css
+++ b/src/main/resources/com/example/pilifitproject/styles/Confirmation.css
@@ -4,8 +4,8 @@
     -fx-border-color: black;
     -fx-border-width: 2px;
     -fx-text-fill: black;
-    -fx-font-size: 10px;
-    -fx-font-family: "Berlin Sans FB Bold";
+    -fx-font-size: 15px;
+    -fx-font-family: "Calibri";
     -fx-background-radius: 20;
     -fx-border-radius: 20;
     -fx-padding: 5 20;
@@ -63,8 +63,8 @@
     -fx-border-color: black;
     -fx-border-width: 2px;
     -fx-text-fill: black;
-    -fx-font-size: 10px;
-    -fx-font-family: "Berlin Sans FB Bold";
+    -fx-font-size: 11px;
+    -fx-font-family: "Calibri";
     -fx-background-radius: 20;
     -fx-border-radius: 20;
     -fx-padding: 5 20;
@@ -73,7 +73,6 @@
 }
 .save-button: hover {
     -fx-background-color: #90EE90;
-
 }
 
 .delete-button {
@@ -81,8 +80,8 @@
     -fx-border-color: black;
     -fx-border-width: 2px;
     -fx-text-fill: black;
-    -fx-font-size: 10px;
-    -fx-font-family: "Berlin Sans FB Bold";
+    -fx-font-size: 11px;
+    -fx-font-family: "Calibri";
     -fx-background-radius: 20;
     -fx-border-radius: 20;
     -fx-padding: 5 20;
@@ -100,8 +99,8 @@
     -fx-border-color: black;
     -fx-border-width: 2px;
     -fx-text-fill: black;
-    -fx-font-size: 10px;
-    -fx-font-family: "Berlin Sans FB Bold";
+    -fx-font-size: 11px;
+    -fx-font-family: "Calibri";
     -fx-background-radius: 20;
     -fx-border-radius: 20;
     -fx-padding: 5 20;
@@ -109,6 +108,12 @@
 
 .cancel-button: hover {
     -fx-background-color: #d9d9d9;
+}
+
+.text-button {
+    -fx-background-color: transparent;
+    -fx-cursor: hand;
+    -fx-font-family: "Calibri";
 }
 
 
