--- a/src/main/resources/com/example/pilifitproject/styles/UploadDialog.css
+++ b/src/main/resources/com/example/pilifitproject/styles/UploadDialog.css
@@ -73,3 +73,19 @@
     -fx-border-width: 1px;
     -fx-background-radius: 15px;
 }
+
+.view-button {
+    -fx-background-color: transparent;
+    -fx-border-color: transparent;
+    -fx-border-radius: 8;
+    -fx-border-width: 2px;
+    -fx-background-radius: 8;
+    -fx-padding: 1 1;
+    -fx-font-size: 15px;
+    -fx-cursor: hand;
+}
+
+.view-button:hover {
+    -fx-background-color: #e0e0e0; /* light gray */
+    -fx-border-color: transparent;
+}
