--- a/src/main/resources/com/example/pilifitproject/view/Collection.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/Collection.fxml
@@ -25,11 +25,11 @@
                         <Image url="@../images/background/bg.png" />
                     </image>
                 </ImageView>
-                <GridPane id="homeabtcontGrid" layoutX="40.0" layoutY="17.0" opacity="0.9" prefHeight="45.0" prefWidth="379.0">
+                <GridPane id="homeabtcontGrid" layoutX="40.0" layoutY="17.0" opacity="0.9" prefHeight="49.0" prefWidth="387.0">
                     <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="108.0" prefWidth="111.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="109.5" prefWidth="117.5" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="206.33331298828125" minWidth="149.33334350585938" prefWidth="152.5" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="109.5" prefWidth="125.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="206.33331298828125" minWidth="144.0" prefWidth="144.0" />
                     </columnConstraints>
                     <rowConstraints>
                         <RowConstraints />
@@ -101,7 +101,7 @@
     <center>
         <AnchorPane prefHeight="442.0" prefWidth="1580.0" BorderPane.alignment="CENTER">
             <children>
-                <ScrollPane fitToHeight="true" fitToWidth="true" layoutX="225.0" layoutY="21.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="1112.0">
+                <ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" layoutX="225.0" layoutY="21.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="504.0" prefWidth="1112.0">
                     <content>
                         <GridPane id="upload/itemsgridpane" fx:id="fitItemGrid" gridLinesVisible="true" hgap="15.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="530.0" prefWidth="1110.0" vgap="10.0">
                             <columnConstraints>
