--- a/src/main/resources/com/example/pilifitproject/view/DeleteConfirmation.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/DeleteConfirmation.fxml
@@ -3,41 +3,53 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="root" prefHeight="199.0" prefWidth="338.0" styleClass="soft-tab" stylesheets="@../styles/Confirmation.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.controller.DeleteConfirmationController">
+<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="190.0" prefWidth="300.0" styleClass="soft-tab" stylesheets="@../styles/Confirmation.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.controller.DeleteConfirmationController">
     <children>
-        <Button layoutX="310.0" layoutY="23.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="15.0" styleClass="close-button" text="X">
+        <Button fx:id="CloseButton" layoutX="267.0" layoutY="5.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="29.0" prefWidth="15.0" styleClass="close-button" text="X">
             <font>
                 <Font name="System Bold" size="4.0" />
             </font>
         </Button>
-      <Label layoutX="129.0" layoutY="78.0" prefHeight="30.0" prefWidth="111.0" text="Are you sure ?">
+      <Label layoutX="69.0" layoutY="78.0" prefHeight="30.0" prefWidth="167.0" styleClass="text-button" text="You’re about to delete this.">
          <font>
-            <Font name="System Bold" size="16.0" />
+            <Font name="System Italic" size="15.0" />
          </font>
       </Label>
-      <Button fx:id="DeleteItemConfirmation" layoutX="197.0" layoutY="147.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="86.0" styleClass="delete-button" text="DELETE">
+      <Button fx:id="DeleteItemConfirmation" layoutX="162.0" layoutY="151.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="83.0" styleClass="delete-button" text="DELETE">
          <font>
             <Font size="10.0" />
          </font>
       </Button>
-      <Button fx:id="CancelDeleteItemConfirmation" layoutX="101.0" layoutY="147.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="86.0" styleClass="cancel-button" text="CANCEL">
+      <Button fx:id="CancelDeleteItemConfirmation" layoutX="63.0" layoutY="151.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="80.0" styleClass="cancel-button" text="CANCEL">
          <font>
             <Font name="System Bold" size="10.0" />
          </font>
       </Button>
-      <ImageView fitHeight="30.0" fitWidth="35.0" layoutX="173.0" layoutY="53.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="44.0" fitWidth="46.0" layoutX="130.0" layoutY="38.0" opacity="0.78" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../images/others/DeleteBin.png" />
+            <Image url="@../images/icons/deleteButtonImage.png" />
          </image>
       </ImageView>
-      <Label layoutX="75.0" layoutY="102.0" text="Are you sure you want to delete this file ?" />
+      <Label layoutX="121.0" layoutY="106.0" styleClass="text-button" text="Proceed?">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font></Label>
     </children>
     <padding>
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
     </padding>
+   <effect>
+      <InnerShadow>
+         <color>
+            <Color opacity="0.800000011920929" />
+         </color>
+      </InnerShadow>
+   </effect>
 </AnchorPane>
