--- a/src/main/resources/com/example/pilifitproject/view/FitDialog.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/FitDialog.fxml
@@ -2,10 +2,12 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.paint.Color?>
 
 <AnchorPane fx:id="fitDialog" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="255.0" prefWidth="205.0" style="-fx-border-radius: 20;" styleClass="tab-border" stylesheets="@../styles/FitDialog.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.controller.FitDialogController">
     <children>
@@ -13,25 +15,51 @@
             <children>
                 <Pane layoutX="14.0" layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="83.0" prefWidth="82.0">
                     <children>
-                        <ImageView id="TopItems" fx:id="topImage" fitHeight="83.0" fitWidth="82.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView id="TopItems" fx:id="topImage" fitHeight="83.0" fitWidth="82.0" pickOnBounds="true" preserveRatio="true">
+                     <effect>
+                        <DropShadow>
+                           <color>
+                              <Color opacity="0.6100000143051147" />
+                           </color>
+                        </DropShadow>
+                     </effect></ImageView>
                     </children>
                 </Pane>
                 <Pane layoutX="14.0" layoutY="97.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="83.0" prefWidth="82.0">
                     <children>
-                        <ImageView id="BottomItems" fx:id="bottomImage" fitHeight="83.0" fitWidth="82.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView id="BottomItems" fx:id="bottomImage" fitHeight="83.0" fitWidth="82.0" pickOnBounds="true" preserveRatio="true">
+                     <effect>
+                        <DropShadow>
+                           <color>
+                              <Color opacity="0.6100000143051147" />
+                           </color>
+                        </DropShadow>
+                     </effect></ImageView>
                     </children>
                 </Pane>
                 <Pane layoutX="95.0" layoutY="62.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="83.0" prefWidth="82.0">
                     <children>
-                        <ImageView id="ShoesItems" fx:id="shoesImage" fitHeight="83.0" fitWidth="82.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView id="ShoesItems" fx:id="shoesImage" fitHeight="83.0" fitWidth="82.0" pickOnBounds="true" preserveRatio="true">
+                     <effect>
+                        <DropShadow>
+                           <color>
+                              <Color opacity="0.6100000143051147" />
+                           </color>
+                        </DropShadow>
+                     </effect></ImageView>
                     </children>
                 </Pane>
+            <ImageView fitHeight="24.0" fitWidth="23.0" layoutX="156.0" layoutY="165.0" opacity="0.45" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/icons/generateicon1.png" />
+               </image>
+            </ImageView>
             </children>
         </Pane>
         <TextField id="TitleOfTheOutfit" fx:id="fitNameField" layoutX="14.0" layoutY="209.0" prefHeight="40.0" prefWidth="143.0" promptText="Fit Name" styleClass="nameFD-button" stylesheets="@../styles/FitDialog.css" />
         <Button id="DeleteButton" fx:id="deleteButton" layoutX="157.0" layoutY="209.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="40.0" prefWidth="35.0" styleClass="view-button" stylesheets="@../styles/FitDialog.css">
          <graphic>
-            <ImageView fitHeight="33.0" fitWidth="33.0" opacity="0.65" pickOnBounds="true" preserveRatio="true" styleClass="view-button">
+            <ImageView fitHeight="33.0" fitWidth="33.0" opacity="0.85" pickOnBounds="true" preserveRatio="true" styleClass="view-button">
                <image>
                   <Image url="@../images/icons/deleteButtonImage.png" />
                </image>
