--- a/src/main/resources/com/example/pilifitproject/view/Home.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/Home.fxml
@@ -30,11 +30,11 @@
                         <Image url="@../images/background/bg.png" />
                     </image>
                 </ImageView>
-                <GridPane id="homeabtcontGrid" layoutX="40.0" layoutY="17.0" opacity="0.9" prefHeight="45.0" prefWidth="379.0">
+                <GridPane id="homeabtcontGrid" layoutX="40.0" layoutY="17.0" opacity="0.9" prefHeight="49.0" prefWidth="387.0">
                     <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="108.0" prefWidth="111.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="109.5" prefWidth="117.5" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="206.33331298828125" minWidth="149.33334350585938" prefWidth="152.5" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="109.5" prefWidth="125.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="206.33331298828125" minWidth="144.0" prefWidth="144.0" />
                     </columnConstraints>
                     <rowConstraints>
                         <RowConstraints />
