--- a/src/main/resources/com/example/pilifitproject/view/ItemInformation.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/ItemInformation.fxml
@@ -1,34 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.InnerShadow?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="309.0" prefWidth="513.0" styleClass="tab-border" stylesheets="@../styles/Closet.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.controller.ItemInformationController">
+<AnchorPane prefHeight="313.0" prefWidth="513.0" styleClass="tab-border" stylesheets="@../styles/Closet.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.controller.ItemInformationController">
    <children>
       <AnchorPane layoutX="26.0" layoutY="29.0" prefHeight="225.0" prefWidth="219.0" style="-fx-background-color: #cccccc;" styleClass="image-holder">
          <children>
-            <ImageView fx:id="ItemInformationImg" fitHeight="206.0" fitWidth="189.0" layoutX="15.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="ItemInformationImg" fitHeight="206.0" fitWidth="200.0" layoutX="9.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true" />
          </children>
       </AnchorPane>
-      <Pane layoutX="27.0" layoutY="266.0" prefHeight="29.0" prefWidth="259.0">
+      <TextField fx:id="nameInput" alignment="CENTER" layoutX="27.0" layoutY="265.0" prefHeight="29.0" prefWidth="144.0" promptText="Name">
+         <styleClass>
+            <String fx:value="image-holder" />
+            <String fx:value="inputtext-holder" />
+         </styleClass>
+      </TextField>
+      <AnchorPane layoutX="175.0" layoutY="265.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="29.0" prefWidth="31.0" style="-fx-background-color: #d9d9d9; -fx-background-radius: 8;">
          <children>
-            <TextField fx:id="nameInput" alignment="CENTER" prefHeight="29.0" prefWidth="144.0" promptText="Name" styleClass="image-holder" />
-            <Button fx:id="favoriteBtn" ellipsisString="" layoutX="147.0" layoutY="1.0" prefHeight="26.0" prefWidth="37.0" styleClass="icon-button" text="❤" textAlignment="CENTER" />
-            <Button fx:id="deleteBtn" ellipsisString="🗑" layoutX="187.0" layoutY="1.0" styleClass="heart-bin" text="🗑" />
+            <Button fx:id="favoriteBtn" ellipsisString="❤" layoutX="5.0" layoutY="1.0" mnemonicParsing="false" styleClass="view-button" text="❤" wrapText="true" />
          </children>
-      </Pane>
+      </AnchorPane>
+      <Button id="deletebutton" fx:id="deleteBtn" layoutX="203.0" layoutY="257.0" mnemonicParsing="false" prefWidth="39.0" styleClass="DL-button" stylesheets="@../styles/ItemDisplay.css">
+         <graphic>
+            <ImageView fitHeight="37.0" fitWidth="37.0" opacity="0.8" pickOnBounds="true" preserveRatio="true" styleClass="view-button">
+               <image>
+                  <Image url="@../images/icons/deleteButtonImage.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
 
                   <!-- Details Column -->
-      <VBox layoutX="263.0" layoutY="55.0" prefHeight="174.0" prefWidth="218.0" spacing="10">
+      <VBox layoutX="263.0" layoutY="60.0" prefHeight="174.0" prefWidth="218.0" spacing="10">
          <children>
             <Text styleClass="title-text" text="CLOTHES DETAILS" wrappingWidth="189.06451416015625">
                <font>
@@ -63,6 +78,13 @@
                      </children>
       </VBox>
       <Button fx:id="closeButton" layoutX="476.0" layoutY="7.0" mnemonicParsing="false" onAction="#handleCancel" styleClass="close-button" text="X" />
-      <Button fx:id="SaveItemInfoBtn" layoutX="455.0" layoutY="268.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="50.0" styleClass="save-button" text="save" />
+      <Button fx:id="SaveItemInfoBtn" layoutX="455.0" layoutY="268.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="50.0" styleClass="save-button" text="SAVE" />
    </children>
+   <effect>
+      <InnerShadow>
+         <color>
+            <Color opacity="0.45038166642189026" />
+         </color>
+      </InnerShadow>
+   </effect>
 </AnchorPane>
