--- a/src/main/resources/com/example/pilifitproject/view/SaveConfirmation.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/SaveConfirmation.fxml
@@ -3,34 +3,53 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.InnerShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="root" prefHeight="199.0" prefWidth="338.0" styleClass="soft-tab" stylesheets="@../styles/Confirmation.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.controller.SaveConfirmationController">
+<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="190.0" prefWidth="300.0" styleClass="soft-tab" stylesheets="@../styles/Confirmation.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.controller.SaveConfirmationController">
     <children>
-        <Button fx:id="CloseButton" layoutX="310.0" layoutY="23.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="29.0" prefWidth="15.0" styleClass="close-button" text="X">
+        <Button fx:id="CloseButton" layoutX="267.0" layoutY="5.0" mnemonicParsing="false" onAction="#handleCancel" prefHeight="29.0" prefWidth="15.0" styleClass="close-button" text="X">
             <font>
                 <Font name="System Bold" size="4.0" />
             </font>
         </Button>
-        <Label layoutX="129.0" layoutY="72.0" prefHeight="30.0" prefWidth="111.0" text="Save changes?">
+        <Label layoutX="121.0" layoutY="106.0" prefHeight="22.0" prefWidth="70.0" styleClass="text-button" text="Proceed?">
             <font>
-                <Font name="System Bold" size="16.0" />
+                <Font name="System Bold" size="18.0" />
             </font>
         </Label>
-        <Button fx:id="SaveEditsBtn" layoutX="197.0" layoutY="147.0" mnemonicParsing="false" onAction="#handleSaveEdits" prefHeight="30.0" prefWidth="118.0" styleClass="save-button" text="Save Changes">
+        <Button fx:id="SaveEditsBtn" layoutX="162.0" layoutY="151.0" mnemonicParsing="false" onAction="#handleSaveEdits" prefHeight="29.0" prefWidth="83.0" styleClass="save-button" text="SAVE">
             <font>
                 <Font size="10.0" />
             </font>
         </Button>
-        <Button fx:id="DiscardChangesBtn" layoutX="67.0" layoutY="147.0" mnemonicParsing="false" onAction="#handleDiscardChanges" prefHeight="30.0" prefWidth="118.0" styleClass="delete-button" text="Discard Changes">
+        <Button fx:id="DiscardChangesBtn" layoutX="63.0" layoutY="151.0" mnemonicParsing="false" onAction="#handleDiscardChanges" prefHeight="29.0" prefWidth="80.0" styleClass="cancel-button" text="CANCEL">
             <font>
                 <Font name="System Bold" size="10.0" />
             </font>
         </Button>
-        <Label layoutX="74.0" layoutY="97.0" text="Are you sure you want to save the changes ?" />
+        <Label layoutX="64.0" layoutY="78.0" prefHeight="30.0" prefWidth="183.0" styleClass="text-button" text="You're about to save changes.">
+         <font>
+            <Font name="System Italic" size="15.0" />
+         </font></Label>
+      <ImageView fitHeight="45.0" fitWidth="70.0" layoutX="129.0" layoutY="34.0" opacity="0.75" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/others/blckofficiallogo.png" />
+         </image>
+      </ImageView>
     </children>
     <padding>
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
     </padding>
+   <effect>
+      <InnerShadow>
+         <color>
+            <Color opacity="0.800000011920929" />
+         </color>
+      </InnerShadow>
+   </effect>
 </AnchorPane>
