--- a/src/main/resources/com/example/pilifitproject/view/UploadDialog.fxml
+++ b/src/main/resources/com/example/pilifitproject/view/UploadDialog.fxml
@@ -2,65 +2,104 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.effect.InnerShadow?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<?import javafx.scene.text.TextFlow?>
 
-<AnchorPane fx:id="root" prefHeight="423.0" prefWidth="336.0" styleClass="soft-tab" stylesheets="@../styles/UploadDialog.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.controller.UploadDialogController">
+<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="410.0" prefWidth="336.0" styleClass="soft-tab" stylesheets="@../styles/UploadDialog.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.pilifitproject.controller.UploadDialogController">
    <children>
-      <Button layoutX="293.0" layoutY="14.0" mnemonicParsing="false" styleClass="close-button" fx:id="CloseButton" text="X" onAction="#handleCancel">
+      <Button fx:id="CloseButton" layoutX="302.0" layoutY="6.0" mnemonicParsing="false" onAction="#handleCancel" styleClass="close-button" text="X">
          <font>
             <Font name="System Bold" size="4.0" />
          </font>
       </Button>
-      <AnchorPane layoutX="27.0" layoutY="58.0" styleClass="image-holder">
+      <AnchorPane layoutX="24.0" layoutY="43.0" styleClass="image-holder">
          <children>
             <ImageView fitHeight="184.0" fitWidth="289.0" layoutX="-2.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true" styleClass="image-holder" />
+            <ImageView fitHeight="144.0" fitWidth="75.0" layoutX="213.0" layoutY="27.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/others/GUIDE%20SS4.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="120.0" fitWidth="75.0" layoutX="6.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/others/GUIDE%20SS1.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="130.0" fitWidth="64.0" layoutX="78.0" layoutY="28.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/others/GUIDE%20SS2.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="130.0" fitWidth="66.0" layoutX="148.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/others/GUIDE%20SS3.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
-      <Text layoutX="41.0" layoutY="268.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="guidelines-title" text="GUIDELINES FOR TAKING A PICTURE OF YOUR CLOTH">
-         <font>
-            <Font name="System Bold" size="10.0" />
-         </font>
-      </Text>
-      <TextFlow layoutX="41.0" layoutY="277.0" prefHeight="35.0" prefWidth="189.0">
+      <Button fx:id="UploadItem" layoutX="104.0" layoutY="359.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="130.0" styleClass="upload-button" text="UPLOAD FILE" />
+      <GridPane layoutX="32.0" layoutY="237.0" prefHeight="110.0" prefWidth="280.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
          <children>
-            <Text opacity="0.6" text="• Prepare your clothes neatly (iron if needed)" wrappingWidth="157.50997924804688">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Clothing Photo Guidelines:" wrappingWidth="183.6171875">
                <font>
-                  <Font name="Berlin Sans FB" size="10.0" />
+                  <Font name="Verdana Bold" size="10.0" />
                </font>
             </Text>
-            <Text opacity="0.6" text="   • Lay flat on a clean floor or hang on a wall" wrappingWidth="194.53125">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="➤ Neatly prepare the clothing (iron if needed)." GridPane.rowIndex="1">
                <font>
-                  <Font name="Berlin Sans FB" size="10.0" />
+                  <Font size="9.0" />
                </font>
             </Text>
-            <Text blendMode="MULTIPLY" opacity="0.6" text="             • Make sure the whole item is in the frame." wrappingWidth="258.484375">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="➤ Lay flat on a clean surface or hang against a plain wall." GridPane.rowIndex="2">
                <font>
-                  <Font name="Berlin Sans FB" size="10.0" />
+                  <Font size="9.0" />
                </font>
             </Text>
-            <Text opacity="0.6" text="     • Use natural light (like near a window).">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="➤ Ensure the entire clothing item is fully visible in the frame." GridPane.rowIndex="3">
                <font>
-                  <Font name="Berlin Sans FB" size="10.0" />
+                  <Font size="9.0" />
                </font>
             </Text>
-            <Text opacity="0.6" text="                • Take a clear front photo with your phone." wrappingWidth="233.6678466796875">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="➤ Use your phone’s rear camera to take a clear, front-facing shot." GridPane.rowIndex="4">
                <font>
-                  <Font name="Berlin Sans FB" size="10.0" />
+                  <Font size="9.0" />
+               </font>
+            </Text>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="➤ Optional: Remove the background for clearer focus and a cleaner look." GridPane.rowIndex="5">
+               <font>
+                  <Font name="System Italic" size="9.0" />
                </font>
             </Text>
          </children>
-      </TextFlow>
-      <Button fx:id="UploadItem" layoutX="96.0" layoutY="354.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="151.0" styleClass="upload-button" text="UPLOAD FILE">
-         <font>
-            <Font name="Segoe UI" size="10.0" />
-         </font>
-      </Button>
+      </GridPane>
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
    </padding>
+   <effect>
+      <InnerShadow>
+         <color>
+            <Color opacity="0.7977099418640137" />
+         </color>
+      </InnerShadow>
+   </effect>
 </AnchorPane>
